<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_fragment_setlist_long_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text_long_date"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/textview_fragment_setlist_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text_location"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/textview_fragment_setlist_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text_setlist_venue"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>
