<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/custom_card_border">

            <TextView
                android:id="@+id/textview_fragment_blog_blog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:text="@string/text_blog_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_fragment_blog_publish_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:text="@string/text_blog_publish_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_fragment_blog_blog_teaser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:maxLines="2"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/text_blog_teaser"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
